# cxengine-android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xginx/androidtest/cxenginetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: actions.csv  frames.csv
app/src/main/assets/shader/: color.fsh  color.vsh  default.fsh  gray.fsh  gray.vsh
app/src/main/cpp/: Game.cpp  Game.h
app/src/main/java/com/cxengine/: EngineActivity.java
app/src/main/java/com/xginx/androidtest/cxenginetest/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk  release
app/src/main/res/values/: strings.xml
app/src/test/java/com/xginx/androidtest/cxenginetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
